Tweak to prevent audio controls spilling onto 2 lines.

--- a/sass/topic_page.scss
+++ b/sass/topic_page.scss
@@ -103,7 +103,7 @@
             color: black;
             .audio-control-icon {
               color: black;
-              font-size: 1.8em;
+              font-size: 1.7em;
             }
           }
         }
